# Adeept-RaspberryYOLO-Follower

./: LICENSE  README.md
src/adeept_neotic/: CMakeLists.txt  package.xml  setup.py
src/adeept_neotic/launch/: run_robot.launch  system.launch
src/adeept_neotic/src/ros_engine/: camera.py  controller.py  controller_nothread.py  findline.py  led_controller.py  move.py  ultrasonic.py
src/adeept_neotic/src/ros_engine/hardware/: led_strip.py  motors.py  tracking_sensor.py  ultrasonic_sensor.py
src/detection_msgs/: CMakeLists.txt  package.xml
src/detection_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg
src/object_follower/: CMakeLists.txt  package.xml
src/object_follower/src/: object_follower.py
src/random_move/: CMakeLists.txt  package.xml
src/random_move/src/: random_move_node.py  smartTraining.py
src/yolov5_ros/src/: detect.py
