<?xml version="1.0"?>
<package format="2">
  <name>adeept_noetic</name>
  <version>0.0.0</version>
  <description>The adeept_noetic package</description>
  <maintainer email="khalid.bourr@gmail.com">khalidbourr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
